[package]
name = "txrx"
version = "0.1.0"
edition = "2018"
description = "A Rust take on the C++ unified executors proposal"
license = "MIT/Apache-2.0"
repository = "https://github.com/AndWass/txrx"

keywords = ["executors", "tasks", "async"]
categories = ["executors", "tasks", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dependencies]
either = { version="1.6", default-features=false }

[dev-dependencies]
txrx-rayon = { path = "../txrx-rayon" }